# glusterfs_fork

./: MAINTAINERS  MAINTAINERS.md  Makefile.am  README  THANKS  configure.ac  glusterfs.spec.in
extras/volfile-server/: Makefile.am  volfile-server.c  volfile-server.h
xlators/: Makefile.am
xlators/cluster/afr/src/: afr-common.c  afr-dir-read.c  afr-dir-write.c  afr-inode-read.c  afr-inode-write.c  afr-inode-write.h  afr-lk-common.c  afr-open.c  afr-read-txn.c  afr-self-heal-common.c  afr-self-heal-data.c  afr-self-heal-entry.c  afr-self-heal-name.c  afr-self-heald.c  afr-transaction.c  afr.c  afr.h  pump.c
xlators/cluster/dht/src/: dht-common.c  dht-common.h  dht-helper.c  dht-inode-read.c  dht-inode-write.c  dht-layout.c  dht-linkfile.c  dht-lock.c  dht-rebalance.c  dht-rename.c  dht-selfheal.c  nufa.c  switch.c  tier-common.c  tier.c
xlators/cluster/ec/src/: ec-code-intel.c  ec-code-x64.c  ec-code.c  ec-common.c  ec-dir-read.c  ec-dir-write.c  ec-generic.c  ec-heal.c  ec-inode-read.c  ec-inode-write.c  ec-locks.c  ec-types.h  ec.c
xlators/cluster/stripe/src/: stripe-helpers.c  stripe.c  stripe.h
xlators/cluster/unify/src/: unify-self-heal.c  unify.c  unify.h
xlators/debug/error-gen/src/: error-gen.c
xlators/debug/io-stats/src/: io-stats.c
xlators/debug/trace/src/: trace.c
xlators/dummy/src/: dummy.c
xlators/encryption/crypt/src/: atom.c  crypt.c  data.c  keys.c  metadata.c
xlators/experimental/: Makefile.am
xlators/experimental/fdl/src/: fdl-tmpl.c
xlators/experimental/jbr-client/src/: fop-template.c  jbrc.c
xlators/experimental/jbr-server/src/: all-templates.c  jbr.c
xlators/experimental/rwo-client/src/: Makefile.am  rwo-client.c  rwo-client.h
xlators/experimental/rwo-server/src/: Makefile.am  rwo-server.c  rwo-server.h
xlators/features/: Makefile.am
xlators/features/arbiter/src/: arbiter.c
xlators/features/changelog/src/: changelog-helpers.c  changelog-rpc-common.c  changelog.c
xlators/features/changetimerecorder/src/: changetimerecorder.c  ctr-helper.h
xlators/features/filter/src/: filter.c  filter.h
xlators/features/gfid-access/src/: gfid-access.c  gfid-access.h
xlators/features/glupy/examples/: negative.py
xlators/features/index/src/: index.c
xlators/features/leases/src/: leases-internal.c  leases.c
xlators/features/locks/src/: clear.c  common.c  common.h  entrylk.c  inodelk.c  locks.h  posix.c  reservelk.c
xlators/features/marker-quota/src/: Makefile.am  marker-quota.c  marker-quota.h
xlators/features/marker/src/: marker-quota.c  marker.c
xlators/features/posix-locks/src/: posix-locks.c
xlators/features/quiesce/src/: quiesce.c
xlators/features/quota/src/: quota-enforcer-client.c  quota.c  quotad-aggregator.c  quotad.c
xlators/features/read-only/src/: worm-helper.c  worm.c
xlators/features/selinux/src/: selinux.c
xlators/features/shard/src/: shard.c  shard.h
xlators/features/simple-quota/: README.md
xlators/features/simple-quota/src/: simple-quota.c  simple-quota.h
xlators/features/snapview-client/src/: snapview-client.c  snapview-client.h
xlators/features/snapview-server/src/: snapview-server-helpers.c  snapview-server-mgmt.c  snapview-server.c
xlators/features/trash/src/: trash.c
xlators/features/upcall/src/: upcall.c  (+1 more)
xlators/filter/src/: filter.c  filter.h
xlators/lib/src/: libxlator.c  libxlator.h
xlators/meta/src/: meta-defaults.c  meta.c  meta.h
xlators/mgmt/volfile-server/: README.md
xlators/storage/: Makefile.am
(+362 files in other folders)
